Topnav and banner done

--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Vince Ladion</title>
 </head>
 <body>
     <div class="container">
-        <div class="topnav">
+        <nav class="topnav">
             <div class="nav-title">
-                VLadion
+                <span>V</span>Ladion
             </div>
-        </div>
-        <div class="nav-links">
-            <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">About Me</a></li>
-            </ul>
-        </div>
+            <a href="#" class="togglebtn">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Education</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Experience</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="banner" id="banner">
-            <img src="" alt="">
+            <img src="sources\banner.png">
         </div>
     </div>
 
