bodybg and aboutme

--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
         <div class="banner" id="banner">
             <img src="sources\banner.png">
         </div>
+
+        <!-- <div class="profile" id="profile">
+                
+            <div class="column-1">
+                <h2>Hello! My name is</h2>
+                <h1><span> Vince Ladion</span></h1> 
+                <p>I am an aspiring Software Engineer and Web Developer and 
+                <br> this is my personal website portfolio 
+                </p>
+                <button class="click"><a target="_blank" href="https://drive.google.com/drive/folders/1d2PT2Fv9NaBDZ2ZQ_jrPeRzVyUiyswXZ?usp=sharing">Download Resume</a></button>
+           </div>
+           
+            <div class="column-2">
+            <img src="sources/profile.jpg" alt="#">
+
+            </div>
+        </div> -->
+
+        </div>
     </div>
 
 </body>
