--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="banner" id="banner">
-            <img src="sources\banner.png">
-        </div>
+        <div class="banner" id="bannerID"></div>
 
         <!-- <div class="profile" id="profile">
                 
