--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
                 </ul>
             </div>
         </nav>
-        <div class="banner" id="bannerID"></div>
+        <div class="banner" id="bannerID">
+            <div class="banner-content">
+                <h1>Hello, World!</h1>
+            </div>
+        </div>
 
         <!-- <div class="profile" id="profile">
                 
@@ -47,7 +51,7 @@
             </div>
         </div> -->
 
-        </div>
+        
     </div>
 
 </body>
