--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="nav-title">
                 <a href="#bannerID"><span>V</span>Ladion</a>
             </div>
-            <a href="#" class="togglebtn">
+            <a  class="togglebtn">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -99,9 +99,11 @@
                     <br>
                     <button><a href="https://www.pup.edu.ph/" target="_blank" rel="noopener noreferrer">Visit</a></button>
                 </div>
-
+                
             </div>
         </section>
+
+
     </div>
 
 </body>
