--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <h2>Markina Catholic School</h2>
                     <img src="sources/MCS-nobg-removebg-preview.png" alt="#" class="schoolLogo">
                     <br>
-                    <button><a href="https://mcs.edu.ph/" target="_blank" rel="noopener noreferrer">Visit</a></button>
+                    <button><a href="https://mcs.edu.ph/" target="_blank" rel="noopener noreferrer">Visit Site</a></button>
                 </div>
 
                 <div class="school">
@@ -81,7 +81,7 @@
                     <h2>Sta. Elena Highschool</h2>
                     <img src="sources/SEHS-nobg.png" alt="#" class="schoolLogo">
                     <br>
-                    <button><a href="https://www.facebook.com/SSG.SEHS/" target="_blank" rel="noopener noreferrer">Visit</a></button>
+                    <button><a href="https://www.facebook.com/SSG.SEHS/" target="_blank" rel="noopener noreferrer">Visit Site</a></button>
                 </div>
 
                 <div class="school">
@@ -90,7 +90,7 @@
                     <h2>Technological Institute of the Philippines</h2>
                     <img src="sources/Technological-Institute-of-the-Philippines.png" alt="#" class="schoolLogo">
                     <br>
-                    <button><a href="https://tip.edu.ph/" target="_blank" rel="noopener noreferrer">Visit</a></button>
+                    <button><a href="https://tip.edu.ph/" target="_blank" rel="noopener noreferrer">Visit Site</a></button>
                 </div>
 
                 <div class="school">
@@ -99,7 +99,7 @@
                     <h2>Polytechnic University of the Philippines</h2>
                     <img src="sources/PUP.png" alt="#"class="schoolLogo">
                     <br>
-                    <button><a href="https://www.pup.edu.ph/" target="_blank" rel="noopener noreferrer">Visit</a></button>
+                    <button><a href="https://www.pup.edu.ph/" target="_blank" rel="noopener noreferrer">Visit Site</a></button>
                 </div>
                 
             </div>
