--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#about-me">About Me</a></li>
                     <li><a href="#education">Education</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#experiences">Experiences</a></li>
                 </ul>
             </div>
         </nav>
@@ -130,6 +130,39 @@
 
             </div>
         </section>
+
+        <!-- Experiences Section -->
+        <section id="experiences">
+            <div class="experiences">
+                
+                <div class="column">
+                    <img src="sources/WSAP.png" alt="#">
+                </div>
+                <div class="column">
+                <h1>Experiences</h1>
+                <h2>Weddings Suppliers Association of the Philippines</h2>
+                <p> <h3>Contribution and Roles</h3>
+                    <br>Full-Stack Developer Intern
+                    <br>WSAP Web Admin
+                    <br>PHD Web Analyst
+                    <br>OPC Web Analyst
+                </p>
+                </div>
+               
+            </div>
+        </section>
+        <!-- Footer -->           
+            <div class="footer">
+                <div class="div-social">
+                    <p>follow my socials:</p>
+                    <a href="https://www.facebook.com/vince.ladion" target="_blank"><img src="sources/fb.png" alt="#" class="social"></a>
+                    <a href="https://www.instagram.com/vinceelads/?hl=en" target="_blank"><img src="sources/ig.png" alt="#" class="social"></a>
+                    <a href="https://twitter.com/LadionVince" target="_blank"><img src="sources/twt.png" alt="#" class="social"></a>
+                    <a href="https://github.com/vinceedesu" target="_blank"><img src="sources/git.png" alt="#" class="social"></a>
+                    <p>copyrights 2022 &copy;</p>
+                </div>
+            </div>
+
 
     </div>
 
