--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="sources/VL.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="script.js" defer></script>
     <title>Vince Ladion</title>
 </head>
@@ -54,7 +55,7 @@
                     <p>I am an aspiring Software Engineer and Developer,
                     <br> and this is my personal website portfolio 
                     </p>
-                    <button class="click"><a target="_blank" href="https://drive.google.com/drive/folders/1d2PT2Fv9NaBDZ2ZQ_jrPeRzVyUiyswXZ?usp=sharing">Download Resume</a></button>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1d2PT2Fv9NaBDZ2ZQ_jrPeRzVyUiyswXZ?usp=sharing"><button class="click">Download Resume</button></a>
             </div>
 
             </div>
@@ -72,7 +73,7 @@
                     <h2>Markina Catholic School</h2>
                     <img src="sources/MCS-nobg-removebg-preview.png" alt="#" class="schoolLogo">
                     <br>
-                    <button><a href="https://mcs.edu.ph/" target="_blank" rel="noopener noreferrer">Visit Site</a></button>
+                    <a href="https://mcs.edu.ph/" target="_blank" rel="noopener noreferrer"><button>Visit Site</button></a>
                 </div>
 
                 <div class="school">
@@ -81,7 +82,7 @@
                     <h2>Sta. Elena Highschool</h2>
                     <img src="sources/SEHS-nobg.png" alt="#" class="schoolLogo">
                     <br>
-                    <button><a href="https://www.facebook.com/SSG.SEHS/" target="_blank" rel="noopener noreferrer">Visit Site</a></button>
+                    <a href="https://www.facebook.com/SSG.SEHS/" target="_blank" rel="noopener noreferrer"><button>Visit Site</button></a>
                 </div>
 
                 <div class="school">
@@ -90,7 +91,7 @@
                     <h2>Technological Institute of the Philippines</h2>
                     <img src="sources/Technological-Institute-of-the-Philippines.png" alt="#" class="schoolLogo">
                     <br>
-                    <button><a href="https://tip.edu.ph/" target="_blank" rel="noopener noreferrer">Visit Site</a></button>
+                    <a href="https://tip.edu.ph/" target="_blank" rel="noopener noreferrer"><button>Visit Site</button></a>
                 </div>
 
                 <div class="school">
@@ -99,7 +100,7 @@
                     <h2>Polytechnic University of the Philippines</h2>
                     <img src="sources/PUP.png" alt="#"class="schoolLogo">
                     <br>
-                    <button><a href="https://www.pup.edu.ph/" target="_blank" rel="noopener noreferrer">Visit Site</a></button>
+                    <a href="https://www.pup.edu.ph/" target="_blank" rel="noopener noreferrer"><button>Visit Site</button></a>
                 </div>
                 
             </div>
@@ -151,7 +152,9 @@
                
             </div>
         </section>
+
         <!-- Footer -->           
+        <section>
             <div class="footer">
                 <div class="div-social">
                     <p>follow my socials:</p>
@@ -162,9 +165,15 @@
                     <p>copyrights 2022 &copy;</p>
                 </div>
             </div>
+        </section>
 
+        <a href="#bannerID"><button class="Box"><i class="fa fa-arrow-up"></i></button></a>
 
     </div>
+
+    <!-- <script src=
+    "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+    </script> -->
 
 </body>
 </html>
