--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
         </section>
 
         <!-- SKILLS SECTION -->
-        <section id="skills">
-            <div class="skills">
+        <section id="skills" class="skills">
+            <!-- <div class="skills"> -->
                 <h1>Skills</h1>
-            </div>
+   
             <div class="skills" >
                     
                 <div class="skill-container">
